# PluginAE

./: .debug  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  DEBUG_GUIDE.md  EXAMPLES.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  Info.plist  LICENSE  PROJECT_SUMMARY.md  QUICK_FIX.md  README.md  README_V2.md  RELEASE_NOTES_V2.md  USAGE.md  build.bat  build.sh  config.json  index.html  package.json
AEscripts/: copyProjects.sh
AEscripts/pglibs/reqlib.framework/: reqlib
AEscripts/pglibs/reqlib.framework/Resources/: Info.plist
AEscripts/pglibs/reqlib.framework/_CodeSignature/: CodeResources
CSXS/: manifest.xml
Font/: README.md
Projects/: README.md  example.jsx  info.json
com.motionland.bigpack/: index.html
com.motionland.bigpack/AEscripts/: FontManager.jsxbin  MotionLand isometry.jsxbin  Remove unused items.jsx
com.motionland.bigpack/CSXS/: manifest.xml
com.motionland.bigpack/css/: compStyle.css  resize-star-css-on.css  settings-grid-css-off.css  settings-grid-css-on.css  settings-name-css-off.css  settings-name-css-on.css
com.motionland.bigpack/js/: require.js
css/: fonts.css  styles.css  theme.css
docs/: ADVANCED_FEATURES.md  BUILD_INSTRUCTIONS.md  DEVELOPMENT.md  PRESET_CREATION.md  QUICK_START.md
img/: README.md
include/: PluginAE.h  PresetManager.h  PresetManagerV2.h  PresetUI.h  entry.h
js/: browser.js  favorites.js  host.jsx  import.jsxbin  install.js  main.js  main.jsxbin  packs.jsxbin  presets.js  script.js  storage.js  tools.jsxbin  ui.js
jsx/: start.jsx
lib/: CSInterface-7.js  CSInterface.js  Vulcan-07.js
lib/tabs/: jquery.scrolling-tabs.js
presets/: preset_schema.json
presets/color/: cinematic_blue.json  teal_orange.json  warm_sunset.json
presets/effects/: film_grain.json  vignette.json
presets/transitions/: fade.json  zoom_blur.json
python_tools/: README.md  preset_gui.py  preset_manager.py  requirements.txt
res/: Puppet mesh options.aep  info.json
src/: PluginAE.cpp  PluginAE_PiPL.r  PluginAEv2.cpp  PresetManager.cpp  PresetManagerV2.cpp  PresetUI.cpp
